# platform-utils

./: .gitignore  Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json  nvm_install.sh
.github/workflows/: coverage.yml
crates/crypto/: Cargo.toml
crates/crypto/src/: algorithm.rs  hash_meta.rs  lib.rs
crates/mailchannel/: Cargo.toml
crates/mailchannel/src/: lib.rs
crates/q-rs/: Cargo.toml  README.md
crates/q-rs-png/: Cargo.toml  README.md
crates/q-rs-png/src/: error.rs  lib.rs
crates/q-rs/src/: LICENSE  bit_buffer.rs  code_ecc.rs  error.rs  finder_penalty.rs  lib.rs  mask.rs  qr_code.rs  segment.rs  segment_mode.rs  version.rs
crates/recode-rs/: Cargo.toml
crates/recode-rs/src/: color_type.rs  error.rs  format.rs  lib.rs  meta.rs  outcome.rs  recoder.rs
crates/route-rs/: Cargo.toml  README.md
crates/route-rs/src/: error.rs  http_router.rs  lexer.rs  lib.rs  path_router.rs  router.rs  segment_lexer.rs  segment_type.rs
crates/typemap/: README.md
crates/typemap/docs/: gotham_stub.rs
crates/typemap/src/: lib.rs  type_id_hasher.rs
