[package]
name = "mailchannel"
version = "0.1.0"
edition = "2021"
authors = ["Perry Birch <perrysd@gmail.com>"]
license = "UNLICENSED"
repository = "https://github.com/vizidrix/platform-utils"
description = "Native Rust interface for sending email via MailChannel"
readme = "../../../README.md"

[dependencies]
# Crates.io

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
