[package]
name = "q-rs-png"
version = "0.1.1"
authors = ["Perry Birch <perrysd@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
image = { version = "0.25.2", default-features = false, features = [ "png" ] }
q-rs = { path = "../q-rs" }