[package]
name = "route-rs"
version = "0.1.0"
authors = ["Perry Birch <perrysd@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
url = "2.3.1"
worker = { version = "0.0.12", optional = true }

[dev-dependencies]
serde_json = "1.0.91"

[features]
default = [
    "worker"
]
worker = [
    "dep:worker"
]